# camper-system-monitor

./: .gitignore  CMakeLists.txt  Makefile  README.md  toolchain.cmake
include/: main_window.h
resources/: resources.qrc
scripts/: setup-graphics.sh  start-graphics
source/: Main.qml  MainView.qml  main.cpp  main.qml  main_window.cpp  mainwindow.cpp  mainwindow.ui  qml.qrc
source/qml/: CustomGlow.qml  FeatureButton.qml  GlowingLabel.qml  Main.qml  MainView.qml  TabMenu.qml  qml.qrc
